tests/paczka1/small_fuzzy/63152203.err
Error in line 9: WeqS9Pi S534 23,2
Error in line 12: 2zwKyTq S19 -1,7
Error in line 15: 5t0rd8jUwfF S5w4 7w,0
